Update webhook URL in index.html

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 
     <script>
         // ZMIEŃ TO NA SWÓJ WEBHOOK URL!
-        const WEBHOOK_URL = 'https://primary-production-7c5f5.up.railway.app/webhook/gratka-config';
+        const WEBHOOK_URL = 'https://n8n.nexuslab.pl/webhook-test/gratka-config-new';
         
         // Załaduj obecną konfigurację przy starcie
         async function loadCurrentConfig() {
